# tinker-self-trainer

./: .gitignore  LICENSE  README.md  main.py  pyproject.toml
src/tinker_cookbook/: LICENSE
src/tinker_self_trainer/: chat.py  dagster_pipeline.py  prepare_data.py  train.py
