[project]
name = "tinker-self-trainer"
version = "0.1.0"
description = "Train a model to act like you using your OpenWebUI chat history"
readme = "README.md"
requires-python = ">=3.13"
authors = [
    {name = "Moritz Gottschling", email = "gottschling.moritz@gmail.com"}
]
dependencies = [
    "blobfile>=3.1.0",
    "chz>=0.3.0",
    "dagster>=1.12.2",
    "dagster-webserver>=1.12.2",
    "datasets>=4.4.1",
    "huggingface-hub>=0.36.0",
    "numpy>=2.3.5",
    "pandas>=2.3.3",
    "termcolor>=3.2.0",
    "tinker>=0.4.1",
    "torch>=2.9.1",
    "transformers>=4.57.1",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/tinker_self_trainer", "src/tinker_cookbook"]
